--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -22,6 +22,9 @@
 <div class="row">
 <div class="col-lg-8">
   <h2>Incorrectly blocked sites reported to ISPs</h2>
+  {% if current_category %}
+  <p>Viewing reports in category <strong>{{ current_category['display_name'] }}</strong>.</p>
+  {% endif %}
 </div>
 <div class="col-lg-4">
 
@@ -73,7 +76,7 @@
     {% endfor %}
 </table>
 
-{{ paging.page_list('.reported_sites', page, pagecount, isp=current_isp) }}
+{{ paging.page_list('.reported_sites', page, pagecount, isp=current_isp, category=request.args.get('category')) }}
 
 </div>
 </div>
