--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -46,21 +46,44 @@
 <div class="backtotop pull-right"><a href="#navmenu">Back to top</a></div>
 {% endmacro %}
 
-{% macro data_table(source, id=None, hide=None) %}
+{% macro reportslink_none(n, row) -%}
+{{ caller() }}
+{%- endmacro %}
+
+{% macro reportslink_category(n, row) -%}
+{% if n == 1 %}
+<a href="{{ url_for('cms.reported_sites', category=row[-1]) }}">{{ caller() }}</a>
+{% else %}
+{{ caller() }}
+{% endif %}
+{%- endmacro %}
+
+{% macro data_table(source, id=None, hide=None, viewlink=reportslink_none) %}
          <table id="{{ id }}" class="table table-striped table-condensed">
             {% set header = source.next() %}
             <tr>
                 <th class="col-md-4">{{ header[0] }}</th>
                 {% for col in header[1:] %}
+                {% if not col.startswith('_') %}
                 <th class="num">{{ col }}</th>
+                {% endif %}
                 {% endfor %}
+                <th></th>
             </tr>
             {% for row in source %}
             <tr class="{{ 'hidden' if hide and loop.index > hide else ''}} ">
                 <td>{{ row[0] }}</td>
                 {% for col in row[1:] %}
-                <td class="num">{{ col }}</td>
+                {% if not header[loop.index].startswith('_') %}
+                <td class="num">
+                    {% call viewlink(loop.index, row) %}
+                    {{ col }}
+                    {% endcall %}
+                </td>
+                {% endif %}
                 {% endfor %}
+                <td>
+                </td>
             </tr>
             {% endfor %}
         </table>
@@ -76,12 +99,12 @@
         and then double-checked by hand to ensure the categorisation was
         accurate.</p>
     {% endcall %}
-        {{ data_table(table_data.notonly_table_1) }}
+        {{ data_table(table_data.notonly_table_1, viewlink=reportslink_category) }}
 
     {% call rmt.remote('TextAreaTwo') %}
         <p>The domains in these categories were identified by keyword searches.</p>
     {% endcall %}
-        {{ data_table(table_data.notonly_table_2) }}
+        {{ data_table(table_data.notonly_table_2, viewlink=reportslink_category) }}
 
         <h3><a name="allkinds"></a>All kinds of sites are reported as blocked</h3>
         {{ backtotop() }}
@@ -92,7 +115,7 @@
         domains.</p>
     {% endcall %}
 
-        {{ data_table(table_data.allkinds_table_1, 'allkinds1', 15) }}
+        {{ data_table(table_data.allkinds_table_1, 'allkinds1', 15, viewlink=reportslink_category) }}
         <div style="text-align: right; margin-top: -1.5em"><a id="allkinds_viewall" href="#">View all ...</a></div>
 
         <h3 class="clearfix"><a name="ispresponses"></a>ISP Responses to reports</h3>
