--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -25,12 +25,16 @@
   {% if current_category %}
   <p>Viewing reports in category <strong>{{ current_category['display_name'] }}</strong>.</p>
   {% endif %}
+  {% if request.args.get('list') %}
+  <p>Viewing reports from the <strong>{{ request.args.list }}</strong> list.</p>
+  {% endif %}
 </div>
 <div class="col-lg-4">
 
 <form class="form form-inline" method="POST" action="{{url_for('.reported_sites', method='POST')}}">
     <div class="form-group">
         <label for="isp">Filter by ISP: </label>
+        <input type="hidden" name="list" value="{{ request.args.list|default('') }}" />
         <select class="form-control" name="isp">
             <option value="" {{ 'selected' if current_isp == None else ''}}>All ISPs</option>
             {% for isp in config.ISPS %}
@@ -76,7 +80,7 @@
     {% endfor %}
 </table>
 
-{{ paging.page_list('.reported_sites', page, pagecount, isp=current_isp, category=request.args.get('category')) }}
+{{ paging.page_list('.reported_sites', page, pagecount, isp=current_isp, category=request.args.get('category'), list=request.args.get('list')) }}
 
 </div>
 </div>
