--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -62,6 +62,8 @@ th.num {
 {% macro reportslink_list(n, row) -%}
 {% if n == 1 %}
 <a href="{{ url_for('list.show_list', name=row[-1]) }}">{{ caller() }}</a>
+{% elif n == 2 %}
+<a href="{{ url_for('list.show_list', name=row[-1], status='blocked') }}">{{ caller() }}</a>
 {% else %}
 {{ caller() }}
 {% endif %}
