show status include/exclude; openrightsgroup/blocked-org-uk#388

--- a/BlockedFrontend/templates/savedlists/show_list.html
+++ b/BlockedFrontend/templates/savedlists/show_list.html
@@ -35,6 +35,9 @@
     <small>{% if request.args.exclude %}excluding{% else %}on{% endif %} {{ network }}</small>
     {% endif %}
 </h3>
+{% if status %}
+<p>Showing <strong>{{ status }}</strong> entries only.</p>
+{% endif %}
     </div>
     <div class="col-md-5">
 
