--- a/BlockedFrontend/templates/savedlists/show_list.html
+++ b/BlockedFrontend/templates/savedlists/show_list.html
@@ -35,7 +35,7 @@
     <small>{% if request.args.exclude %}excluding{% else %}on{% endif %} {{ network }}</small>
     {% endif %}
 </h3>
-{% if status %}
+{% if request.args.status %}
 <p>Showing <strong>{{ status }}</strong> entries only.</p>
 {% endif %}
     </div>
