show status include/exclude; openrightsgroup/blocked-org-uk#388

--- a/BlockedFrontend/templates/savedlists/show_list.html
+++ b/BlockedFrontend/templates/savedlists/show_list.html
@@ -36,7 +36,7 @@
     {% endif %}
 </h3>
 {% if request.args.status %}
-<p>Showing <strong>{{ status }}</strong> entries only.</p>
+<p>Showing <strong>{{ request.args.status }}</strong> entries only.</p>
 {% endif %}
     </div>
     <div class="col-md-5">
