use policy and year links; openrightsgroup/blocked-org-uk#388

--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -80,7 +80,10 @@
     {% endfor %}
 </table>
 
-{{ paging.page_list('.reported_sites', page, pagecount, isp=current_isp, category=request.args.get('category'), list=request.args.get('list')) }}
+{{ paging.page_list('.reported_sites', page, pagecount, 
+    isp=current_isp, status=request.args.get('status'), category=request.args.get('category'),
+    list=request.args.get('list'), year=request.args.get('year')
+    ) }}
 
 </div>
 </div>
