--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -17,6 +17,11 @@
 {{ g.remote_content.TextAreaThree|safe }}
 {%endblock%}
 
+{% block page_menu %}
+<div><a href="{{ url_for('.reported_sites_category') }}">Reported sites, by category</a></div>
+{% endblock %}
+
+
 {% block bodyrow2 %}
 
 <div class="row">
