add footer link for DEA blocks; openrightsgroup/blocked-org-uk#391

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -116,6 +116,7 @@ piwikTracker.enableLinkTracking();
             <a class="" href="/credits">Credits</a>
             <a class="" href="/stats/probes">Probe Status</a>
             <a class="" href="/legal-blocks">Court Ordered Blocks</a>
+            <a class="" href="/dea-blocking-orders">Age-verification Blocks</a>
             <a class="" href="/support">Get involved</a>
             <a class="" href="https://www.openrightsgroup.org/donate/">Donate</a>
             <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
